--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="tbd-9K-6be" id="QiS-yA-gP8"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="fLS-PR-eB9"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="fLS-PR-eB9">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="bKg-Yb-kgP">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="tbd-9K-6be" id="Ohd-ZA-aHq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lsf-TW-I6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
